# nlp-cess

./: .gitignore  README.md  cluster.py  identity.py  main.py  named_entity.py  preprocessing.py  pronouns.json  pronouns.py  pyproject.toml  summarization.py
